configure map key in ENV variable

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <script
-      src="https://maps.googleapis.com/maps/api/js?key=ENV['MAP_KEY']&callback=initMap&libraries=drawing&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=<%=ENV['MAP_KEY']%>&callback=initMap&libraries=drawing&v=weekly"
       defer
     ></script>
 <div id="map"></div>
